8) init.d: netfilter add ForwardSesLimit (use for limit forward sessions per user).<br>
9) kernel: exfat: upstream updates.<br>
10) kernel: mtd: blkdevs: fix potential deadlock + lockdep warnings.<br>
11) kernel: hw_nat: allow dynamic set FoE 64/80b in runtime, use FoE 80b only IPv6 offload enabled.<br>
12) kernel: mips: fix work highmem at 7621 samples.<br>
13) kernel: mips: fix highmem crash in __update_cache.<br>
14) kernel: mips: revert: make CAC_ADDR and UNCAC_ADDR account for PHYS_OFFSET.<br>
15) kernel: mips: revert: HIGHMEM fixes for cache aliasing and non-DMA I/O.<br>
16) kernel: mips: revert: adjust mips highmem offset to avoid the need for -mlong-calls on systems with >256M RAM.<br>
17) kernel: mips: revert: fix race condition in lazy cache flushing.<br>
18) kernel: mips: autodetect memsize not support high memory (limit detect to 448Mb on mips boards).<br>
19) kenrel: mips: allow long calls on highmem support builds.<br>
20) kernel: ralink_gpio: cleanup and small fixup.<br>
21) kernel: net: increase conntrack size depend by ram_size.<br>
22) kernel: net: ipmr: fix static mfc/dev leaks on table destruction.<br>
23) kernel: net: ipmr, ip6mr: fix vif/tunnel failure race condition.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~99%).<br>
2) need add ForwardSesLimit to Firewall page (default 0 - disabled).<br>
3) need add subchannel select for 5GHz module.<br>
4) need review, experiments with new roaming code in MT76x2 driver, need add multiif support in iappd daemon and implement to WebUI.<br>
5) in very far future: need add in firewall support xt_time matches for parental control.<br>
6) in very far future: need add perip shaper script and webui .<br>
7) in very far future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
8) in very far future: port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
<br>
<br>
<br>