@@ -1496,6 +1496,7 @@
 21) kernel: net: increase conntrack size depend by ram_size.<br>
 22) kernel: net: ipmr: fix static mfc/dev leaks on table destruction.<br>
 23) kernel: net: ipmr, ip6mr: fix vif/tunnel failure race condition.<br>
+24) kernel: net: ipv6: fix tunnel error handling.<br>
 <br>
 <br>
 <b>TODO:</b><br>
